Fix article overflow on small screens

--- a/styles/default.css.scss
+++ b/styles/default.css.scss
@@ -94,6 +94,7 @@ body > article {
   p {
     font-size: 14pt;
     line-height: 1.5em;
+    overflow-x: scroll;
   }
 
   a {
